# RTC-Strikes-Back

./: .env.example  .env.test  .gitignore  README.md  TESTING.md  database.sql  docker-compose.yml  index.html  launcher.sh  migration_bans.sql  scratch.js  scratch2.js  servers.json  test.sh
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml  release.yml
backend/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md
backend/coverage/: tarpaulin-report.html
backend/src/: lib.rs  main.rs  notifications.rs  socket.rs
backend/src/handlers/: auth.rs  channel.rs  messages.rs  mod.rs  server.rs  trophee.rs  upload.rs  user.rs
backend/src/middleware/: auth.rs
backend/src/models/: channel.rs  message.rs  mod.rs  server.rs  user.rs
backend/src/routes/: auth.rs  channel.rs  messages.rs  mod.rs  server.rs  trophee.rs  user.rs
backend/src/services/: auth.rs  channel.rs  mention.rs  message.rs  mod.rs  permission.rs  server.rs  trophee.rs
backend/tests/: channel_tests.rs  handlers_integration_tests.rs  handlers_tests.rs  integration.rs  message_tests.rs  permission_tests.rs  server_tests.rs  socket_coverage.rs  socket_integration.rs
backend/tests/common/: mod.rs
backend/uploads/: .gitignore
desktop/: package-lock.json  package.json
desktop/src-tauri/: tauri.conf.json
frontend/: .dockerignore  Dockerfile  babel.config.js  jest.config.js  jest.config.ts  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/__tests__/: utils.test.ts
frontend/app/: globals.css  (+2 more)
nginx/: Dockerfile  nginx.conf  readme.md
scripts/: test_sequence.sh
(+65 files in other folders)
