[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
bcrypt = "0.17.0"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
rand = "0.8"
redis = { version = "0.27.6", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
socketioxide = { version = "0.18.1", features = ["state"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "chrono"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3.22"
uuid = { version = "1.11", features = ["serde", "v4"] }
image = "0.25.5"
reqwest = { version = "0.12.12", features = ["json", "multipart"] }
sha1 = "0.10.6"
hex = "0.4.3"
regex = "1"

